--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -87,10 +87,13 @@
 #      - kubelet={{ kube_version + '-00' }}
 #      - kubeadm={{ kube_version + '-00' }}
 #      - kubectl={{ kube_version + '-00' }}
-      - kubelet=1.30.1-1.1
-      - kubeadm=1.30.1-1.1
-      - kubectl=1.30.1-1.1
-
+#      - kubelet=1.30.1-1.1
+#      - kubeadm=1.30.1-1.1
+#      - kubectl=1.30.1-1.1
+      - kubelet={{ kube_version }}
+      - kubeadm={{ kube_version }}
+      - kubectl={{ kube_version }}
+      
 - name: exclude kube components from apt upgrades
   shell: |
     apt-mark hold kubelet kubeadm kubectl containerd
