--- a/playbooks/configure_bgp.yml
+++ b/playbooks/configure_bgp.yml
@@ -1,6 +1,5 @@
----
 - name: Configure BGP between Calico and FortiGate
   hosts: control_planes
   become: yes
   roles:
-    - calico_bgp
+    - roles/calico_bgp
