--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -1,5 +1,7 @@
 kube_version: "1.30.1"
 istio_version: "1.22.1"
+metallb_version: "v0.14.5"
+
 group: "appowner"
 container_runtime: containerd
 network: calico
