fix install istio addons

--- a/roles/istio_addons/tasks/main.yaml
+++ b/roles/istio_addons/tasks/main.yaml
@@ -1,6 +1,5 @@
 ---
 - name: Descargar archivos YAML de addons de Istio
-  hosts: helm
   become: yes
   tasks:
     - name: Descargar archivos YAML de addons de Istio
@@ -13,7 +12,7 @@
 
     - name: Cambiar propietario de archivos descargados
       file:
-        path: "/tmp/{{ item.dest }}"
+        path: "/tmp/{{ item }}"
         owner: appuser
       loop:
         - grafana.yaml
